--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -610,7 +610,7 @@ bindmd = SUPER, mouse:273, ResizeWindow, resizewindow
 
 ** Image To Text
 #+begin_src conf
-  bindd = $mainMod SHIFT, T, Image to Text, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
+  bindd = $mainMod SHIFT, T, Image to Text, exec, ~/.config/hypr/scripts/image-to-text.sh
 #+end_src
 
 ** Status Bar
