--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -459,6 +459,9 @@ List of options
   windowrule = tag +floating-window, class:(blueberry.py|org.gnome.NautilusPreviewer|com.gabm.satty|About|TUI.float)
   windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), title:^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
 
+  # Popped window rounding
+  windowrule = rounding 8, tag:pop
+
   # No Screen share windows
   windowrule = float, title:^(.*Bitwarden.*)$
   windowrule = noscreenshare, title:^(.*Bitwarden.*)$
@@ -634,7 +637,7 @@ bindmd = SUPER, mouse:273, ResizeWindow, resizewindow
   bindd = $mainMod, F, Fullscreen, fullscreen, 2
   bindd = $mainMod CTRL, F, Fullscreen complete, fullscreen, 0
   bindd = $mainMod SHIFT, F, Fullscreen Window in Workspace, fullscreen, 1
-  bindd = $mainMod, SPACE, Toggle Floating, togglefloating,
+  bindd = $mainMod, SPACE, Pop window, exec, ~/.config/hypr/scripts/window-pop.sh
   bindd = $mainMod SHIFT, SPACE, ToggleSplit, togglesplit, # dwindle
   bindd = $mainMod, P, Pseudo Window, pseudo, # dwindle
   bindd = $mainMod, O, Toggle Opacity, exec, hyprctl dispatch setprop active opaque toggle
