--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -257,7 +257,7 @@ Configure mouse and touchpad here
       gaps_out = 10
       border_size = 2
       layout = dwindle
-      col.active_border = $color4 $color6 45deg
+      col.active_border = $color4
       col.inactive_border = $color8
       allow_tearing = false
       snap {
